examples/sample-product-chart/chart-test/reports/run-full-bench-20260609-085346/scenario-service-mesh-istio-ingress-gateway-basic-20260609-101819/artifacts/manifests/istio-virtualservices.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"name":"sample-vs","namespace":"sample"},"spec":{"gateways":["sample-igw"],"hosts":["sample.test.local"],"http":[{"match":[{"uri":{"prefix":"/"}}],"route":[{"destination":{"host":"sample.sample.svc.cluster.local","port":{"number":80}}}]}]}}
    creationTimestamp: "2026-06-09T14:19:01Z"
    generation: 1
    name: sample-vs
    namespace: sample
    resourceVersion: "672"
    uid: 229d31ef-3eb2-4995-8fac-6cf89f5fe035
  spec:
    gateways:
    - sample-igw
    hosts:
    - sample.test.local
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: sample.sample.svc.cluster.local
          port:
            number: 80
kind: List
metadata:
  resourceVersion: ""
